
syntax = "proto3";

package echoservice;
option java_package = "net.conradwood.golang.apis.echoservice";

message PingRequest {
  uint32 SequenceNumber = 1;
  string Payload = 2;
}

message PingResponse {
  PingRequest Response = 1;
}

service EchoService {
  rpc Ping(PingRequest) returns (PingResponse);
}

service EchoStreamService {
  rpc SendToServer(stream PingRequest) returns (PingResponse);
}
